--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@ username: Shloak Pacheriwala
 user_description: I'm a Student from India, always searching for the next challenge; no task is too scary nor too difficult. Lately I have been immersed in world of Cryptocurrency. 
 user_title: Software Engineer
 email: mauriurraco@gmail.com
-# twitter_username: lorem_ipsum
+twitter_username: Spideyadv
 instagram_username: mauriciourraco7
-facebook_username: mauricio.urraco
-linkedin_username: murraco
-github_username:  murraco
+# facebook_username: mauricio.urraco
+# linkedin_username: murraco
+# github_username:  murraco
 # medium_username: lorem_ipsum
 # medium_url: lorem_ipsum.medium.com
 # gplus_username:  lorem_ipsum
