--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: Jekyll Theme Minimal Resume
 
 # User settings
 username: Shloak Pacheriwala
-user_description: I'm a Student from India, always searching for the next challenge; no task is too scary nor too difficult. Lately I have been immersed in world of Cryptocurrency. 
+user_description: I'm a Student from India, always searching for the next challenge; no task is too scary nor too difficult. Lately I have been immersed in world of Cryptocurrency.
 user_title: Software Engineer
 email: mauriurraco@gmail.com
 twitter_username: Spideyadv
@@ -17,5 +17,6 @@ instagram_username: mauriciourraco7
 # medium_username: lorem_ipsum
 # medium_url: lorem_ipsum.medium.com
 # gplus_username:  lorem_ipsum
+discord_username: 797727571328368671
 
-exclude: ['package.json', 'src' , 'node_modules']
+exclude: ["package.json", "src", "node_modules"]
