--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ description: Jekyll Theme Minimal Resume
 username: Shloak Pacheriwala
 user_description: I'm a Student from India, always searching for the next challenge; no task is too scary nor too difficult. Lately I have been immersed in world of Cryptocurrency.
 user_title: Software Engineer
-email: mauriurraco@gmail.com
+email: spidyadv@gmail.com
 twitter_username: Spideyadv
-instagram_username: mauriciourraco7
+# instagram_username: mauriciourraco7
 # facebook_username: mauricio.urraco
 # linkedin_username: murraco
 # github_username:  murraco
