--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: Shloak Pacheriwala
-description: Jekyll Theme Minimal Resume
+title: Spidey
+description: Spidey's Homepage
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 username: Shloak Pacheriwala
 user_description: I'm a Student from India, always searching for the next challenge; no task is too scary nor too difficult. Lately I have been immersed in world of Cryptocurrency.
-user_title: Software Engineer
+user_title: Collab Manager | Advisor | Marketing Lead
 email: spidyadv@gmail.com
 twitter_username: Spideyadv
 # instagram_username: mauriciourraco7
