--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: Spidey's Homepage
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Shloak Pacheriwala
+username: Spidey
 user_description: I'm a Student from India, always searching for the next challenge; no task is too scary nor too difficult. Lately I have been immersed in world of Cryptocurrency.
 user_title: Collab Manager | Advisor | Marketing Lead
 email: spidyadv@gmail.com
