--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ are my friends and dope people!! I am very systematic person, Hardworking, Hungr
 Achieve something big that's why grinding hard from this age!! I love to connect
 with new people and make friends either it be web 2 or web . I am also 
 Fond of music and Games and I have a gaming channel ( Only for my Web 2 FAM ).  
-This might be hypocretic but I love NFTs and hate NFTs at the same time, as I rarely
+This might be hypocritic but I love NFTs and hate NFTs at the same time, as I rarely
 mint any NFTs but I sell them 😂😂😂.
 Enough of me, I guess. 
 If you are a client looking for 1 spot destination for Collabs then shoot a DM on 
@@ -36,8 +36,6 @@ twitter_username: Spideyadv
 # facebook_username: mauricio.urraco
 # linkedin_username: murraco
 # github_username:  murraco
-# medium_username: lorem_ipsum
-# medium_url: lorem_ipsum.medium.com
 # gplus_username:  lorem_ipsum
 discord_username: 797727571328368671
 
